<resources>
    <string name="app_name">Romantic</string>

    <string name="message">Сообщения</string>
    <string name="news">Новости</string>
    <string name="main">Главная</string>
    <string name="events">События</string>
    <string name="hikes">Походы</string>


    <!--Launcher-->
    <string name="havent_register_yet">haven\'t register yet?</string>



    <string name="action_settings">Settings</string>
    <string name="email">Email Id</string>
    <string name="user_name">Display name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_register">SIGN UP</string>
    <string name="register">Register</string>

    <string name="user_successfully_added">User successfully added!</string>
    <string name="user_unable_to_add">Unable to add user!</string>
    <string name="adding_user_to_db">Adding user to database.</string>
    <string name="loading">Loading</string>
    <string name="sending">Sending</string>
    <string name="please_wait">Please wait...</string>

    <string name="font_family_roboto_light">sans-serif-thin</string>
    <string name="type_a_message">Type a message...</string>
    <string name="action_logout">Logout</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="logout">Logout</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="cancel">Cancel</string>

    <string name="tab_mountain">Горный</string>
    <string name="tab_walking">Пеший</string>
    <string name="tab_water">Водный</string>
    <string name="tab_ski">Лыжный</string>

    <string name="tab_news">Все</string>
    <string name="tab_favorite_news">Закладки</string>
    <string name="toast_exit_app_warning_text">Tap again to exit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="participant">Участники</string>
    <string name="hike_information">Информация для похода</string>
    <string name="material_lecture">Материалы, лекции</string>
    <string name="tools">Снаряжение</string>
    <string name="my_post">Моя должность</string>
    <string name="route">Маршрут</string>
    <string name="training_calendar">Календарь тренировок</string>
    <string name="group_chat">Групповой чат</string>
    <string name="create_hike">Создать поход</string>


    <!--create hike-->
    <string name="create_hike_boss">Руководитель</string>
    <string name="create_hike_region">Район</string>



    <!--user-->
    <string name="user_invite">Пригласить</string>
    <string name="user_invited">Добавлен</string>
    <string name="build_route_long_tap_to_build">Жмякни по карте, добавь точку!</string>
    <string name="build_route">Построить маршрут</string>



    <string-array name="category_list">
        <item>Поход выходного дня</item>
        <item>1 категория сложности</item>
        <item>2 категория сложности</item>
        <item>3 категория сложности</item>
        <item>4 категория сложности</item>
        <item>5 категория сложности</item>
        <item>6 категория сложности</item>
    </string-array>

    <string-array name="type_hike_list">
        <item>Горный</item>
        <item>Лыжный</item>
        <item>Пеший</item>
        <item>Водный</item>
    </string-array>

    <string-array name="user_post_list">
        <item>Укажите должность:</item>
        <item>Руководитель</item>
        <item>Медик</item>
        <item>Завхоз</item>
        <item>Ремнаборщик</item>
        <item>Политорг</item>
        <item>Зам по снару</item>
        <item>МПС</item>
        <item>Фотограф</item>
    </string-array>
</resources>
