<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/start_activity">

    <EditText
            android:id="@+id/etEmail"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:text="alex@gmail.com"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_white_selected"
            android:textColorHint="@color/hint_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="@dimen/margin_xs"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"/>

    <EditText
            android:id="@+id/etPassword"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:hint="@string/password"
            android:text="fender"
            android:textColorHint="@color/hint_color"
            android:inputType="textPassword"
            android:textColor="@color/text_white_selected"
            app:layout_constraintEnd_toStartOf="@+id/etEmail"
            app:layout_constraintStart_toEndOf="@+id/etEmail"
            android:layout_marginBottom="@dimen/margin_xxxl"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"/>


    <Button
            android:id="@+id/btnLogin"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentEnd="true"
            android:background="@color/colorPrimary"
            android:text="@string/login"
            android:textColor="@color/text_white_selected"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            app:layout_constraintStart_toEndOf="@+id/etPassword"
            app:layout_constraintEnd_toStartOf="@+id/etPassword"
    />


    <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_xs"
            android:gravity="center"
            android:text="@string/login_register"
            android:textColor="@color/text_white_selected"
            android:textSize="@dimen/text_s"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintStart_toEndOf="@+id/btnLogin"
            app:layout_constraintEnd_toStartOf="@+id/btnLogin"
            app:layout_constraintHorizontal_bias="0.2"/>


    <TextView
            android:id="@+id/tvRegistryNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/havent_register_yet"
            android:textColor="@color/text_white_selected"
            android:textSize="@dimen/text_m"
            app:layout_constraintTop_toBottomOf="@+id/btnLogin"
            app:layout_constraintEnd_toStartOf="@+id/btnLogin"
            app:layout_constraintStart_toEndOf="@+id/btnLogin"
            android:layout_marginStart="@dimen/margin_xs"
            app:layout_constraintHorizontal_bias="0.614"/>

</androidx.constraintlayout.widget.ConstraintLayout>