<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/start_activity">

    <EditText
            android:id="@+id/etDisplayName"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:hint="@string/user_name"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_white_selected"
            android:textColorHint="@color/hint_color"
            android:layout_marginBottom="@dimen/margin_xs"
            app:layout_constraintBottom_toTopOf="@+id/etEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


    <EditText
            android:id="@+id/etEmail"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textColor="@color/text_white_selected"
            android:textColorHint="@color/hint_color"
            app:layout_constraintStart_toEndOf="@+id/etDisplayName"
            app:layout_constraintEnd_toStartOf="@+id/etDisplayName"
            android:layout_marginBottom="@dimen/margin_xs"
            app:layout_constraintBottom_toTopOf="@+id/etPassword"/>


    <EditText
            android:id="@+id/etPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:textColor="@color/text_white_selected"
            android:textColorHint="@color/hint_color"
            app:layout_constraintStart_toEndOf="@+id/etEmail"
            app:layout_constraintEnd_toStartOf="@+id/etEmail"
            android:layout_marginBottom="@dimen/margin_xs"
            app:layout_constraintBottom_toTopOf="@+id/btnRegister"/>


    <Button
            android:id="@+id/btnRegister"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentEnd="true"
            android:background="@color/colorPrimary"
            android:text="@string/register"
            android:textColor="@color/text_white_selected"
            app:layout_constraintStart_toEndOf="@+id/etPassword"
            app:layout_constraintEnd_toStartOf="@+id/etPassword"
            android:layout_marginBottom="@dimen/button_margin_bottom"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>