<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <CalendarView
            android:id="@+id/cvDateOfHike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_xs"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_xs"
            app:layout_constraintTop_toTopOf="parent"/>

    <Spinner
            android:id="@+id/spinnerCategory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/category_list"
            app:layout_constraintStart_toStartOf="@+id/cvDateOfHike"
            app:layout_constraintEnd_toEndOf="@+id/cvDateOfHike"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cvDateOfHike"/>

    <EditText
            android:id="@+id/etBossHike"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:hint="@string/create_hike_boss"
            android:inputType="datetime"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/spinnerCategory"/>

    <EditText
            android:id="@+id/etHikeRegion"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:hint="@string/create_hike_region"
            android:inputType="text"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary"
            app:layout_constraintStart_toEndOf="@+id/etBossHike"
            app:layout_constraintEnd_toStartOf="@+id/etBossHike"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etBossHike"/>

    <Button
            android:id="@+id/btnRegister"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentEnd="true"
            android:background="@color/colorPrimary"
            android:text="@string/create_hike"
            android:textColor="@color/text_white_selected"
            app:layout_constraintStart_toEndOf="@+id/etHikeRegion"
            app:layout_constraintEnd_toStartOf="@+id/etHikeRegion"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/etHikeRegion"/>

</androidx.constraintlayout.widget.ConstraintLayout>